# hft_bot_v2

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  backtest_results.json  docker-compose.yml  features.yaml  mkdocs.yml  overnight_processing_optimized.bat  pyproject.toml  test_sharpe.csv  test_winrate.csv  train_xgb_fix.py
.github/workflows/: ci.yml
config/: bot_config.yaml  params_ma.csv
datasets/: selector_15m.csv  selector_1m.csv  selector_1m_v2.csv  selector_21d_sharpe.csv  selector_30d_sharpe.csv  selector_7d_sharpe.csv  selector_return_full.csv  selector_sharpe_full.csv  selector_training.csv  selector_winrate_full.csv  test_30dias.csv  test_quick.csv
hft_bot/: __init__.py  bot.py  cli.py  templates.py
hft_bot/analytics/: __init__.py  indicators.py  market.py
hft_bot/backtesting/: __init__.py  engine.py  walk_forward.py
hft_bot/commands/: __init__.py  backtest.py  optimize.py  run.py
hft_bot/core/: __init__.py  config.py  exceptions.py  interfaces.py
hft_bot/exchange/: __init__.py  binance_exchange.py  factory.py  paper_exchange.py
hft_bot/infra/: __init__.py  alerts.py  logging.py  metrics.py  persistence.py
hft_bot/optimization/: __init__.py  optimizer.py
hft_bot/risk/: __init__.py  manager.py  position_sizer.py
hft_bot/strategies/: __init__.py  ma_crossover.py  simple.py
models/lgb_sharpe/: classification_report.csv  model.joblib  model_metadata.json  walk_forward_results.csv
models/rf_return/: classification_report.csv  model.joblib  model_metadata.json  walk_forward_results.csv
models/rf_sharpe/: classification_report.csv  model.joblib  model_metadata.json  walk_forward_results.csv
models/rf_sharpe_optimized/: grid_search_results.csv  model.joblib  model_metadata.json  walk_forward_results.csv
models/rf_winrate/: classification_report.csv  model.joblib  model_metadata.json  walk_forward_results.csv
models/xgb_sharpe_fixed/: classification_report.csv  label_encoder.joblib  model.joblib  model_metadata.json
scripts/: build_training_set.py  build_training_set_v3.py  download_binance.py  train_model_v2.py  train_selector.py  train_selector_rf.py
